thumbnail urls in js

--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html>
 <!-- manifest="manifest.appcache" -->
-  <head>
-  	<link href='http://fonts.googleapis.com/css?family=Droid+Sans:400,700|Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
-    <title>Alex Quatrano</title>
-    <!-- Bootstrap -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="css/mysheet.css" rel="stylesheet" media="screen">
-  </head>
+<head>
+	<link href='http://fonts.googleapis.com/css?family=Droid+Sans:400,700|Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
+	<title>Alex Quatrano</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link href="css/mysheet.css" rel="stylesheet" media="screen">
+</head>
 <body id="body">
 	<script src="http://code.jquery.com/jquery-latest.js"></script>
 	<script src="js/article.js"></script>
@@ -48,6 +47,21 @@
 	<div id="articleSpacer"></div>
 </div>
 
+<!--google analytics-->
+<script type="text/javascript">
+
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-37582057-1']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
+</script>
+<!--end google analytics-->
 
 </body>
 </html>
