--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <!--end google analytics-->
 
 </head>
-<body id="body">
+<body id="body" class="landing">
 	<script src="http://code.jquery.com/jquery-latest.js"></script>
 	<script src="js/article.js"></script>
 	<script src="js/portfolio.js"></script>
@@ -34,11 +34,12 @@
 	<script src="js/isotope.js"></script>
 	<script src="js/myscript.js"></script>
 
-<div id="loading">
-	<div class="container">
-		<div class="centered">
-			<div class="illusion"></div>
-		</div>
+<div id="landing">
+	<div class="intro loading">
+		<div>Here's where I'm supposed to tell you who I am.
+		<div class="blockQuote">"Man first of all exists, encounters himself, surges up in the world - and defines himself afterwards." - Jean-Paul Sartre</div></div>
+		<div class="action">I don't know yet, but I can show you where I'm headed.</div>
+		<br><div class="action"><a id="enter">continue</a></div>
 	</div>
 </div>
 
@@ -55,7 +56,7 @@
 	<div id="line"></div>
 </div>
 <div id="layer1"></div>
-<div id="landing" class="container">
+<div id="thumbnails" class="container">
 	<div id="thumbSpacer"></div> 	
 </div>
 
